# testbuild

./: .gitattributes  .gitignore  CMakeLists.txt  PACK_VERSION.txt  README.md  README_GRADLE_WRAPPER.md  README_SHORTPATH.txt  build.bat  run_install.bat
.github/workflows/: android-ci.yml  build_ndk_r10c.yml
app/: gradlew  gradlew.bat  settings.gradle
app/app/: build.gradle
app/app/src/main/: AndroidManifest.xml
app/app/src/main/assets/: LICENSE.html  gfxbackground.vert.header  gfxline.vert  gfxline.vert.header  gfxlineA.frag.header  inputs.base  lwp.-1.theme  lwp.-2.theme  lwp.2.theme  lwp.3.theme
app/app/src/main/cpp/: CMakeLists.txt  CMakeLists.txt.bak  elf_exports.c  elf_exports.h  export_stl_symbols.cpp  ffi_call_arm32.S  lwpbridge_jni.c  lwplocal_proxy.cpp
app/app/src/main/java/com/example/lwprpcharness/: BootReceiver.kt  CurveHarness.kt  HarnessPaths.kt  LogWriter.kt  MainActivity.kt  NativeBridge.kt  NativeSession.kt  ProcMaps.kt  RpcServer.kt  Targets.kt  WorkerService.kt
app/app/src/main/java/com/sonymobile/experienceflow/renderer/: CurveRenderer.kt
app/app/src/main/res/layout/: activity_main.xml
app/app/src/main/res/values/: strings.xml
assets/: README.txt  footer.vert.base  gfxbackground.frag  gfxbackground.vert  gfxlineA.frag  gfxlineB.frag  header.frag.base  header.vert.base  lwp.0.theme  lwp.1.theme  lwp.12.theme  lwp.13.theme  lwp.14.theme  lwp.15.theme  lwp.4.theme  lwp.5.theme  lwp.6.theme  lwp.7.theme
docs/: PROTOCOL.md  USAGE.md
include/ef2/: buffer.h  common.h  curve.h  curve_offsets.h  decomp_compat.h  event.h  gles.h  meshgen.h  platform.h  program.h  renderer.h  rendererdata.h  shaderfile.h  texture.h  theme.h  theme_tree.h  timeutil.h
jni/: Android.mk  Application.mk  Application_bfd.mk  Application_dev.mk  Application_dev_gold.mk  exports_armeabi_v7a.map
jni/ldscripts/: armelf_linux_eabi_gold_compat.xsw  armelf_linux_eabi_gold_compat_goldfix.xsw  armelf_linux_eabi_gold_compat_matchgold.xsw  armelf_linux_eabi_gold_compat_relro.xsw  armelf_linux_eabi_gold_compat_relrohdr.xsw  armelf_linux_eabi_gold_compat_relrohdr_unidbg.xsw
logs/22258122500/meta/: source_sha.txt  timestamp_utc.txt
logs/22258122500/text/: file.txt  file_fix.txt  fingerprint_toolchain.txt  phdr_fix_unstripped.txt  phdr_patch_stripped.txt  phdr_patch_unstripped.txt  phdr_raw_stripped.txt  phdr_raw_unstripped.txt  readelf_A_fix.txt  readelf_Ws_fix.txt  readelf_comment.txt  readelf_d.txt  readelf_d_fix.txt  readelf_h_fix.txt  readelf_l_fix.txt  readelf_r.txt  readelf_s_fix.txt
ref/decomp/: liblwplocal.so.c  liblwplocal.so.i64
ref/java/sources/com/sonymobile/experienceflow/gles/: GLES20Ext.java  GLWallpaperService.java
ref/java/sources/com/sonymobile/experienceflow/renderer/: Capabilities.java  CurveRenderer.java  CurveRendererImpl.java  CurveSettings.java  ExperienceFlowRenderer.java  FramerateController.java  FramerateControllerBase.java  ProxyFramerateController.java  RenderHelper.java  RenderModeListener.java
ref/java/sources/com/sonymobile/experienceflow/util/: BitmapUtil.java  BufferUtil.java  Constants.java  FastMath.java  FileUtil.java  FreeList.java  MathUtil.java
ref/java/sources/com/sonymobile/experienceflow/wallpaper/: ColorInfo.java  ColorPicker.java  ExperienceFlowApplication.java  ExperienceFlowPreferencesActivity.java  ExperienceFlowService.java  LockscreenApiConstants.java  MasterResetReceiver.java  Refreshable.java  SwipeData.java  ThemeChangeReceiver.java
ref/java/sources/com/sonymobile/experienceflow2/: BuildConfig.java  Manifest.java  R.java
ref/java/sources/com/sonymobile/runtimeskinning/: Constants.java  ExceptionHandler.java  ReflectionUtils.java  RuntimeSkinningHelper.java  RuntimeSkinningUtil.java  SkinGlue.java  SkinGlueV16.java  SkinGlueV17.java  SkinGlueV18.java
ref/native/: liblwplocal.so.c
ref/reference/: REFERENCE_SO_NOTE.md  exports_armeabi-v7a_dynsym_defined.tsv  liblwplocal_armeabi-v7a.sha1
ref/trace/: trace_curve_theme0.jsonl  trace_curve_theme1.jsonl  trace_curve_touch.jsonl
reference/: README.md  SHA256SUMS.txt
scripts/: build_so_android.bat  build_so_android.sh  check_exports_against_reference.py  clean.bat  collect_artifacts.bat  collect_artifacts.sh
src/compat/: bss_ef2pad_v7a.c  bss_pad_v7a.c  compat_exports_armeabi_v7a.c  compat_lodepng_mangled_v7a.c  cpp_shims_v7a.cpp  data_ef2pad_v7a.c  force_iostream_refs.cpp  gcc_comment_ref.S  gcc_comment_ref.c  got_local_relatives_v7a.c  got_relative_pad_v7a.c  imports_anchor_relplt_v7a.inc  imports_anchor_v7a.cpp  init_array_pad_v7a.c  libgcc_anchor_v7a.c  reldyn_anchor_v7a.cpp  section_boundary_syms.ld  text_pad_v7a.S
src/curve/: curve.c  curveclient.c
src/gles/: gles_stub.c
src/jni/: curve_renderer_jni.c
src/lodepng/: lodepng.c
src/platform/: platform.c
src/renderer/: buffer.c  meshgen.c  program.c  renderer.c  rendererdata.c  shaderfile.c  texture.c
src/theme/: theme.c  theme_tree.c
src/util/: decomp_compat.c  timeutil.c
tools/: README.md  check_elf_sanity.py  collect_run_logs.sh  compare_dynamic_logs.py  compare_import_orders.py  elf_patch_headers.py  fix_ndk_r10c_symlinks.sh  fix_needed_order.py  gen_imports_anchor_from_ref.py  patch_gnu_relro_phdr.py  requirements_tools.txt  section_budget_v7a.py  split_liblwplocal.py  trace_analyze_curve.py
tools/elf/: patch_dt_needed_order_inplace.py
tools/gold_dyn_debug/gold_dyn_debug/: README.md  patch_ldscript.py
tools/host_smoke/: curve_layout_check.c
tools/static/: compare_dynsym.py  resolve_call_targets.py
tools/symbols/: check_so_sha1.py  compare_dynsym_defined.py  dump_dynsym_defined.py  dynsym_util.py  extract_required_symbols.py  gen_compat_exports_c.py
tools/trace/: compare_trace_jsonl.py
tools/unicorn/: README.md  scan_jni_calls.py  scan_symbol_calls.py
